--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -7,4 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="CtD_Prework.js"></script>
   </head>
+  <center><h1>Check The Weather!</h1>
+    <script>requestWeather()</script>
+  </center>
 </html>
