--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CtD Prework</title>
+    <title>Weathering For You</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="CtD_Prework.js"></script>
   </head>
-  <center><h1>Check The Weather!</h1>
-    <script>requestWeather()</script>
+  <center><h1>Weathering For You</h1>
+    <script src="CtD_Prework.js"></script>
+    <script>requestWeather();</script>
   </center>
 </html>
