Temp and Conditions Page set
Basic pages linking to temp and conditions, needs styling

--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -8,15 +8,10 @@
     </head>
     <center>
       <h1>Weathering For You</h1>
+      <a href="conditions.html">Go to Weather Conditions</a>
+      <a href="temp.html">Go to Temperature Page</a>
+        <!--Call Scripts and create information divs-->
       <script src="CtD_Prework.js"></script>
-      <script>
-        weatherData = requestWeather();
-      </script>
-      <div id="outputLat">
-        <script>
-          returnLat();
-        </script>
-      </div>
     </center>
   </html>
 </html>
