--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -1,4 +1,5 @@
-<html style="background-color: lightblue">
+<html>
+  <body>
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
@@ -8,10 +9,16 @@
     </head>
     <center>
       <h1>Weathering For You</h1>
-      <a href="conditions.html">Go to Weather Conditions</a>
-      <a href="temp.html">Go to Temperature Page</a>
+      <img src="welcome.png" alt="Welcome_Logo"><br>
+      <div>Wondering what the weather is like right now? We've got you covered!
+      </div><br>
+      <div>Please click on a button below to be redirected</div><br>
+      <a href="conditions.html" class="btn">Go to Weather Conditions</a>
+      &nbsp;&nbsp;
+      <a href="temp.html" class = "btn">Go to Temperature Page</a>
         <!--Call Scripts and create information divs-->
       <script src="CtD_Prework.js"></script>
     </center>
   </html>
+  </body>
 </html>
