Html Format Fixes

--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -1,13 +1,10 @@
-<html>
+<html lang="en">
   <body>
-  <html lang="en">
-    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Weathering For You</title>
       <link rel="stylesheet" href="./style.css" />
-    </head>
-    <center>
+    <div style="text-align: center;">
       <h1>Weathering For You</h1>
       <img src="welcome.png" alt="Welcome_Logo"><br>
       <div>Wondering what the weather is like right now? We've got you covered!
@@ -18,7 +15,6 @@
       <a href="temp.html" class = "btn">Go to Temperature Page</a>
         <!--Call Scripts and create information divs-->
       <script src="CtD_Prework.js"></script>
-    </center>
-  </html>
+    </div>
   </body>
 </html>
