Format Fixes pt2

--- a/Ctd_Prework/index.html
+++ b/Ctd_Prework/index.html
@@ -6,15 +6,15 @@
       <link rel="stylesheet" href="./style.css" />
     <div style="text-align: center;">
       <h1>Weathering For You</h1>
-      <img src="welcome.png" alt="Welcome_Logo"><br>
+      <img src="./welcome.png" alt="Welcome_Logo"><br>
       <div>Wondering what the weather is like right now? We've got you covered!
       </div><br>
       <div>Please click on a button below to be redirected</div><br>
-      <a href="conditions.html" class="btn">Go to Weather Conditions</a>
+      <a href="./conditions.html" class="btn">Go to Weather Conditions</a>
       &nbsp;&nbsp;
-      <a href="temp.html" class = "btn">Go to Temperature Page</a>
+      <a href="./temp.html" class = "btn">Go to Temperature Page</a>
         <!--Call Scripts and create information divs-->
-      <script src="CtD_Prework.js"></script>
+      <script src="./CtD_Prework.js"></script>
     </div>
   </body>
 </html>
