--- a/Ctd_Prework/conditions.html
+++ b/Ctd_Prework/conditions.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Weather Conditions</h1>
     <link rel="stylesheet" href="./style.css" />
-    <script src="CtD_Prework.js"></script>
+    <script src="./CtD_Prework.js"></script>
     <div id="conditionsOutput">
         <script>
         returnCurrentConditions()
@@ -14,9 +14,9 @@
     </div>
 
     <!-- Navigation -->
-    <a href="temp.html">Go to Temperature Page</a>
+    <a href="./temp.html">Go to Temperature Page</a>
     <div></div>
-    <a href="index.html">Back to Main Page</a>
+    <a href="./index.html">Back to Main Page</a>
 
 </body>
 </html>
