--- a/Ctd_Prework/temp.html
+++ b/Ctd_Prework/temp.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Temperature</h1>
     <link rel="stylesheet" href="./style.css" />
-    <script src="CtD_Prework.js"></script>
+    <script src="./CtD_Prework.js"></script>
     <div id="tempOutput">
         <script>
             returnCurrentTemp()
@@ -14,9 +14,9 @@
     </div>
 
     <!-- Navigation -->
-    <a href="conditions.html">Go to Weather Conditions</a>
+    <a href="./conditions.html">Go to Weather Conditions</a>
     <div></div>
-    <a href="index.html">Back to Main Page</a>
+    <a href="./index.html">Back to Main Page</a>
 
 </body>
 </html>
