Added User Location as lat and long

--- a/conditions.html
+++ b/conditions.html
@@ -12,11 +12,11 @@
         returnCurrentConditions()
         </script>
     </div>
-
-    <!-- Navigation -->
-    <a href="./temp.html">Go to Temperature Page</a>
+    <br>
+    <!-- Buttons to switch pages -->
+    <a href="./temp.html" class = "btn">Go to Temperature Page</a>
     <div></div>
-    <a href="./index.html">Back to Main Page</a>
+    <a href="./index.html" class = "btn">Back to Main Page</a>
 
 </body>
 </html>
