--- a/temp.html
+++ b/temp.html
@@ -12,11 +12,11 @@
             returnCurrentTemp()
         </script>
     </div>
-
-    <!-- Navigation -->
-    <a href="./conditions.html">Go to Weather Conditions</a>
+    <br>
+    <!-- Buttons to switch pages -->
+    <a href="./conditions.html" class = "btn">Go to Weather Conditions</a>
     <div></div>
-    <a href="./index.html">Back to Main Page</a>
+    <a href="./index.html" class = "btn">Back to Main Page</a>
 
 </body>
 </html>
