Comments, Webpage Styling, Readme Additions

--- a/conditions.html
+++ b/conditions.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Conditions Page</title>
-</head>
-<body>
+  </head>
+  <body style="text-align: center">
+    <!--Center all text-->
     <h1>Weather Conditions</h1>
     <link rel="stylesheet" href="./style.css" />
     <script src="./CtD_Prework.js"></script>
     <div id="conditionsOutput">
-        <script>
-        returnCurrentConditions()
-        </script>
+      <script>
+        returnCurrentConditions(); //Call functon to display weather conditions
+      </script>
     </div>
-    <br>
+    <br />
     <!-- Buttons to switch pages -->
-    <a href="./temp.html" class = "btn">Go to Temperature Page</a>
-    <div></div>
-    <a href="./index.html" class = "btn">Back to Main Page</a>
-
-</body>
+    <a href="./temp.html" class="btn">Go to Temperature Page</a>
+    <a href="./index.html" class="btn">Back to Main Page</a>
+  </body>
 </html>
