--- a/temp.html
+++ b/temp.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Temperature Page</title>
-</head>
-<body>
+  </head>
+  <body style="text-align: center">
+    <!--Center all text-->
     <h1>Temperature</h1>
     <link rel="stylesheet" href="./style.css" />
     <script src="./CtD_Prework.js"></script>
     <div id="tempOutput">
-        <script>
-            returnCurrentTemp()
-        </script>
+      <script>
+        returnCurrentTemp(); //Call functon to display temperature
+      </script>
     </div>
-    <br>
+    <br />
     <!-- Buttons to switch pages -->
-    <a href="./conditions.html" class = "btn">Go to Weather Conditions</a>
+    <a href="./conditions.html" class="btn">Go to Weather Conditions</a>
     <div></div>
-    <a href="./index.html" class = "btn">Back to Main Page</a>
-
-</body>
+    <a href="./index.html" class="btn">Back to Main Page</a>
+  </body>
 </html>
