Additional visuals for user experience

--- a/conditions.html
+++ b/conditions.html
@@ -8,7 +8,9 @@
     <h1>Weather Conditions</h1>
     <link rel="stylesheet" href="./style.css" />
     <script src="./CtD_Prework.js"></script>
+    <img src="./rain.png" width="300" height="300" alt="Rain_Logo" /><br />
     <div id="conditionsOutput">
+      Loading...
       <script>
         returnCurrentConditions(); //Call functon to display weather conditions
       </script>
