--- a/temp.html
+++ b/temp.html
@@ -8,7 +8,18 @@
     <h1>Temperature</h1>
     <link rel="stylesheet" href="./style.css" />
     <script src="./CtD_Prework.js"></script>
+    <div class="image-container">
+      <div id="thermometer"></div>
+      <img
+        src="./thermometer.png"
+        width="100"
+        height="220"
+        alt="Thermometer_Logo"
+      />
+      <br />
+    </div>
     <div id="tempOutput">
+      Loading...
       <script>
         returnCurrentTemp(); //Call functon to display temperature
       </script>
